--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,28 @@ input {
     border: 1px solid #F2F2F4;
     border-radius: 10px;
 }
+.main-content-area {
+  display: flex; 
+  height: calc(100vh - 70px);
+  position: relative;
 
+}
+.content-area {
+  width: 100%;
+  background-color: red;
+  transition: all 0.3s;
+}
+
+.minimizebtn {
+  padding: 10px;
+  border-radius: 50%;
+  transform: rotate(-90deg);
+  position: absolute;
+  bottom: 30px;
+  left: 15px;
+  transition: all 0.3s;
+
+}
 /* media query  */
 @media (max-width:900px) {
 
