--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -28,28 +28,32 @@
     font-weight: 500;
     font-size: 24px;
 }
-
-.topprofiletab {
+.topprofiletabarea {
     background: var(--bg-white);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
     border-radius: 45px;
     width: 150px;
     height: 50px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.topprofiletab {
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
+    position: relative;
+    z-index: 111 !important;
 }
-
-.topprofiletab li {
-    height: 100%;
-}
-
 .imgarea img {
     height: 100%;
 }
-
-.topprofiletab li {
+.topprofiletab h2{
+    height: 100%;
     font-weight: 500;
     font-size: 14px;
     line-height: 24px;
@@ -57,4 +61,50 @@
     text-transform: capitalize;
     display: flex;
     align-items: center;
+    position: relative;
 }
+.dropdownbtn{
+    background-color: transparent;
+    border: none;
+}
+
+.profiledropdown{
+    position: absolute;
+    background-color: white;
+    padding: 10px;
+    top: 50%;
+    width: 100%;
+    left: 0;
+    z-index: 1;
+    border-radius: 5px;
+    padding-top: 40px;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 7%);
+}
+.profiledropdown li{
+    padding: 10px;
+    text-transform: capitalize;
+    padding: 10px 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 30px;
+}
+.logout {
+    background: rgba(255, 1, 1, 0.1);
+    border-radius: 5px;
+    width: 100%;
+    color: #FF5E5E;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-weight: 500;
+    text-transform: capitalize;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .logout svg {
+    padding-right: 5px;
+  }
