--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -79,6 +79,7 @@
     border-radius: 5px;
     padding-top: 40px;
     box-shadow: 0px 10px 20px rgb(0 0 0 / 7%);
+    transition: all 0.3s;
 }
 .profiledropdown li{
     padding: 10px;
