--- a/src/styles/Buycredits.module.css
+++ b/src/styles/Buycredits.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 .onetimearea {
@@ -10,8 +11,9 @@
 
 .allcreditcards {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .creditbox {
@@ -55,6 +57,9 @@
     line-height: 28px;
     text-transform: capitalize;
 }
+
+
+/* drawer  */
 .buycreditdrawer {
     padding: 30px 20px;
     width: 556px;
@@ -103,4 +108,18 @@
 .paybuybtn {
     padding: 10px 20px;
     text-transform: none;
+}
+@media (max-width:900px) {
+    .buycreditdrawer {
+        padding: 30px 10px;
+        width: 300px;
+        max-width: 250px;
+    }
+    .creditcarddetailstable {
+        padding: 20px;
+    }
+    .buycreditdrawer p.costprcredit {
+        border: 1px solid var(--border-light);
+        width: auto;
+    }
 }
