--- a/src/styles/Buycredits.module.css
+++ b/src/styles/Buycredits.module.css
@@ -122,4 +122,7 @@
         border: 1px solid var(--border-light);
         width: auto;
     }
+    .orangebtn {
+        padding: 10px 20px;
+    }
 }
