subcpton nav miniimage position

--- a/src/styles/Buycredits.module.css
+++ b/src/styles/Buycredits.module.css
@@ -113,6 +113,7 @@
 .subscriptioncreditbox{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 @media (max-width:900px) {
